# auth

./: Cargo.toml  README.md  docker-compose.yml
auth-service/: Cargo.toml
auth-service/src/models/: mod.rs  shared.rs  users.rs
auth-service/src/routes/: mod.rs  register.rs  router.rs
chat-service/: denon.config.ts
chat-service/src/: ws-server.ts
chat-service/src/controllers/: messageHandler.ts
chat-service/src/utils/: requestParser.ts
lfg_front/: README.md  pubspec.yaml
lfg_front/android/app/: build.gradle
lfg_front/lib/: main.dart
lfg_front/lib/src/pages/: dashboard.dart  login.dart
lfg_front/linux/: CMakeLists.txt  my_application.cc
lfg_front/macos/Runner.xcodeproj/: project.pbxproj
lfg_front/macos/Runner/Configs/: AppInfo.xcconfig
lfg_front/test/: widget_test.dart
lfg_front/web/: index.html  manifest.json
lfg_front/windows/: CMakeLists.txt
lfg_front/windows/runner/: Runner.rc  main.cpp
mongodb/: init.js  mongo-init.js
postgres/: Dockerfile  postgres-init.sh
room-service/: package-lock.json  package.json
room-service/src/: app.module.ts  app.service.ts  schema.gql
room-service/src/channel/: channel.controller.ts  channel.entity.ts  channel.module.ts  channel.service.ts
room-service/src/message/: message.controller.ts  message.module.ts  message.schema.ts  message.service.ts
room-service/src/rooms/: rooms.controller.ts  rooms.entity.ts  rooms.model.ts  rooms.module.ts  rooms.resolver.ts  rooms.service.ts  rooms.subscriber.ts
src/: main.rs
src/models/: users.rs
src/routes/: login.rs  register.rs  router.rs
(+8 files in other folders)
