[package]
name = "auth-service"
version = "0.1.0"
authors = ["dragan1810 <d.novakovic1810@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# mongo startup
# docker-compose up --build -d mongodb 

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5.5"
futures = "0.3"
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mongodb = "1.1.1"
bson = "1.1.0"
jsonwebtoken = "7.2.0"